--- a/index.html
+++ b/index.html
@@ -1,74 +1,8 @@
 ---
 layout: default
+
+title: Helping Others Pursue Excellence
+banner: "assets/img/home-banner.jpg"
+intro: "The purpose of HOPE Leadership Academy is to identify students who have leadership potential, provide leadership and mentoring training through our three year, service oriented program, and furnish program graduates as peer mentors to students in poverty.  Our goal is to decrease the dropout rate and thus improve the quality of life in our schools, communities, and state."
 ---
-
-<div class="container">
-
-  <div>
-    <img class="logo" src="assets/img/HOPE_logo.svg" alt="HOPE Leadership Academy Logo">
-  </div>
-
-  <div>
-    <h1 class="title">Title</h1>
-    <h3 class="subtitle">Subtitle</h3>
-    <h2 class="heading">Heading</h2>
-    <h4 class="subheading">Subheading</h4>
-  </div>
-
-  <div>
-    <p>This is a piece of sampled text. This text is <strong>strong</strong>. This text is <em>emphasized!</em>. This text is <span class="muted">muted</span>.</p>
-  </div>
-
-  <div class="light-green-bg">
-    <button class="-light blue-bg">Primary</button>
-    <button class="-dark light-green-bg">Secondary</button>
-    <button class="-outline dark-green-bg">Outline</button>
-    <br>
-    <button class="-light" disabled="true">Primary</button>
-    <button class="-dark" disabled="true">Secondary</button>
-    <button class="-outline" disabled="true">Outline</button>
-  </div>
-
-  <div>
-    <form>
-      <fieldset>
-        <legend>Forms and Inputs</legend>
-        <div>
-          <label for="input">Input</label>
-          <input type="text" id="input" name="input">
-        </div>
-        <div>
-          <label for="textarea">Textarea</label>
-          <textarea id="textarea" name="textarea"></textarea>
-        </div>
-        <div>
-          <label for="select">Select</label>
-          <select id="select" name="select">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-          </select>
-        </div>
-        <div>
-          <p>
-            <input type="radio" name="radio" id="radio_1" value="one"/>
-            <label for="radio_1">one</label>
-          </p>
-          <p>
-            <input type="radio" name="radio" id="radio_2" value="two"/>
-            <label for="radio_2">two</label>
-          </p>
-        </div>
-        <div>
-          <label for="checkbox">Checkbox</label>
-          <input type="checkbox" name="checkbox" id="checkbox" value="checkbox"/>
-        </div>
-        <div>
-          <input type="submit" value="Submit">
-        </div>
-      </fieldset>
-    </form>
-  </div>
-
-</div><!-- end .container -->
 
