Create and style CTA component

--- a/index.html
+++ b/index.html
@@ -6,3 +6,20 @@ banner: "assets/img/home-banner.jpg"
 intro: "The purpose of HOPE Leadership Academy is to identify students who have leadership potential, provide leadership and mentoring training through our three year, service oriented program, and furnish program graduates as peer mentors to students in poverty.  Our goal is to decrease the dropout rate and thus improve the quality of life in our schools, communities, and state."
 ---
 
+<ul class="cta-list">
+	<li class="cta-list__item blue-bg">
+		<h2>About H.O.P.E.</h2>
+		<p>Learn about our mission, imapct, and organizers</p>
+		<a class="button" href="/about">Learn More</a>
+	</li>
+	<li class="cta-list__item light-green-bg">
+		<h2>Program Overview</h2>
+		<p>Explore the details and successes of our 3-year program</p>
+		<a class="button" href="/program">Learn More</a>
+	</li>
+	<li class="cta-list__item dark-green-bg">
+		<h2>Get Involved</h2>
+		<p>Improve graduation rates by sponsoring students and teachers in our program.</p>
+		<a class="button" href="/donate">Learn More</a>
+	</li>
+</ul>
