Start to create and style blockquote component

--- a/styles.html
+++ b/styles.html
@@ -17,6 +17,11 @@ layout: default
 
   <div>
     <p>This is a piece of sampled text. This text is <strong>strong</strong>. This text is <em>emphasized!</em>. This text is <span class="muted">muted</span>.</p>
+
+    <blockquote>
+      This program is the best for kids and teachers. So effective. So professional. Wow.
+      <cite>John Doe</cite>
+    </blockquote>
   </div>
 
   <div class="light-green-bg">
