--- a/styles.html
+++ b/styles.html
@@ -19,7 +19,7 @@ layout: default
     <p>This is a piece of sampled text. This text is <strong>strong</strong>. This text is <em>emphasized!</em>. This text is <span class="muted">muted</span>.</p>
 
     <blockquote>
-      This program is the best for kids and teachers. So effective. So professional. Wow.
+      <p>This program is the best for kids and teachers. So effective. So professional. Wow.</p>
       <cite>John Doe</cite>
     </blockquote>
   </div>
