Adjust styles on Graph List component

--- a/about/index.html
+++ b/about/index.html
@@ -39,7 +39,7 @@ intro: "The purpose of HOPE Leadership Academy is to identify students who have 
 <section class="container">
 	<h2 class="heading">Our Impact</h2>
 	<ul class="link-list--interactive" id="graph-links">
-		<li class="link-list__item --active" id="attendance">Attendance</li>
+		<li class="link-list__item link-list__item--active" id="attendance">Attendance</li>
 		<li class="link-list__item" id="discipline">Discipline</li>
 		<li class="link-list__item" id="academics">Academics</li>
 		<li class="link-list__item" id="aspire">Aspire Scores</li>
