--- a/styles.html
+++ b/styles.html
@@ -16,6 +16,42 @@ layout: default
   </div>
 
   <div>
+    <ul class="donation-list">
+      <li class="donation-list__item">
+        <div class="info">
+          <h2>Sponsor a Student</h2>
+          <p>
+            Adopt a student within your community for this Summer program, this will allow the student to participate all week in this leadership program, have two meals each day, and be partnered with a young professional to mentor him/her throughout the following school year.
+          </p>
+        </div>
+        <span class="price">$500</span>
+      </li>
+      <li class="donation-list__item">
+        <div class="info">
+          <h2>Sponsor a Teacher</h2>
+          <p>
+            Sponsor a teacher for this leadership academy. This provides classroom materials, pay, and training for the educator to work with all at-risk students throughout this Summer program. This Leadership Academy also provides one week of Continuing Education Units for all participating educators.
+          </p>
+        </div>
+        <span class="price">$750</span>
+      </li>
+      <li class="donation-list__item">
+        <div class="info">
+          <h2>Collaborator</h2>
+          <p>
+            <ul>
+              <li>Recognition on Leadership Academy website.</li> 
+              <li>Announced as sponsor at graduation ceremony.</li> 
+              <li>Personalized thank you letter from participating students.</li>
+            </ul>
+          </p>
+        </div>
+        <span class="price">$1000</span>
+      </li>
+    </ul>
+  </div>
+
+  <div>
     <p>This is a piece of sampled text. This text is <strong>strong</strong>. This text is <em>emphasized!</em>. This text is <span class="muted">muted</span>.</p>
 
     <blockquote>
