--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ intro: "The purpose of HOPE Leadership Academy is to identify students who have 
 
 <ul class="cta-list">
 	<li class="cta-list__item blue-bg">
-		<h2>About H.O.P.E.</h2>
+		<h2>Our Mission</h2>
 		<p>Learn about our mission, imapct, and organizers</p>
 		<a class="button" href="/about">Learn More</a>
 	</li>
