Updates to links to account for baseurl

--- a/about/index.html
+++ b/about/index.html
@@ -112,11 +112,11 @@ organizers:
 	<li class="cta-list__item light-green-bg">
 		<h2>Program Overview</h2>
 		<p>Explore the details and successes of our 3-year program</p>
-		<a class="button" href="/program">Learn More</a>
+		<a class="button" href="{{page.baseurl}}/program">Learn More</a>
 	</li>
 	<li class="cta-list__item dark-green-bg">
 		<h2>Get Involved</h2>
 		<p>Improve graduation rates by sponsoring students and teachers in our program.</p>
-		<a class="button" href="/donate">Learn More</a>
+		<a class="button" href="{{page.baseurl}}/donate">Learn More</a>
 	</li>
 </ul>
