--- a/program/index.html
+++ b/program/index.html
@@ -91,7 +91,7 @@ intro: "H.O.P.E. Leadership Academy is a three-year program that incorporates Po
 	<li class="cta-list__item dark-green-bg">
 		<h2>Get Involved</h2>
 		<p>Improve graduation rates by sponsoring students and teachers in our program.</p>
-		<a class="button" href="/donate">Learn More</a>
+		<a class="button" href="{{page.baseurl}}/donate">Learn More</a>
 	</li>
 </ul>
 
