More link updates -_____-

--- a/about/index.html
+++ b/about/index.html
@@ -51,7 +51,7 @@ organizers:
 	<ul class="graph-list" id="graphs">
 		<li class="graph-list__item" id="attendance">
 			<figure>
-				<img src="/assets/img/line-graph.png" alt="Line graph of HOPE Leadership Academy student's attendance">
+				<img src="{{site.baseurl}}/assets/img/line-graph.png" alt="Line graph of HOPE Leadership Academy student's attendance">
 				<figcaption>
 					Attendence increased x% amongst students in the HOPE Leadership Academy
 				</figcaption>
@@ -59,7 +59,7 @@ organizers:
 		</li>
 		<li class="graph-list__item u-hidden" id="discipline">
 			<figure>
-				<img src="/assets/img/pie-graph.png" alt="Pie graph of HOPE Leadership Academy student's grades">
+				<img src="{{site.baseurl}}/assets/img/pie-graph.png" alt="Pie graph of HOPE Leadership Academy student's grades">
 				<figcaption>
 					Attendence increased x% amongst students in the HOPE Leadership Academy
 				</figcaption>
@@ -67,7 +67,7 @@ organizers:
 		</li>
 		<li class="graph-list__item u-hidden" id="academics">
 			<figure>
-				<img src="/assets/img/line-graph.png" alt="Line graph of HOPE Leadership Academy student's attendance">
+				<img src="{{site.baseurl}}/assets/img/line-graph.png" alt="Line graph of HOPE Leadership Academy student's attendance">
 				<figcaption>
 					Attendence increased x% amongst students in the HOPE Leadership Academy
 				</figcaption>
@@ -75,7 +75,7 @@ organizers:
 		</li>
 		<li class="graph-list__item u-hidden" id="aspire">
 			<figure>
-				<img src="/assets/img/pie-graph.png" alt="Pie graph of HOPE Leadership Academy student's grades">
+				<img src="{{site.baseurl}}/assets/img/pie-graph.png" alt="Pie graph of HOPE Leadership Academy student's grades">
 				<figcaption>
 					Attendence increased x% amongst students in the HOPE Leadership Academy
 				</figcaption>
@@ -112,11 +112,11 @@ organizers:
 	<li class="cta-list__item light-green-bg">
 		<h2>Program Overview</h2>
 		<p>Explore the details and successes of our 3-year program</p>
-		<a class="button" href="/program">Learn More</a>
+		<a class="button" href="{{site.baseurl}}/program">Learn More</a>
 	</li>
 	<li class="cta-list__item dark-green-bg">
 		<h2>Get Involved</h2>
 		<p>Improve graduation rates by sponsoring students and teachers in our program.</p>
-		<a class="button" href="/donate">Learn More</a>
+		<a class="button" href="{{site.baseurl}}/donate">Learn More</a>
 	</li>
 </ul>
