Even more link updates!

--- a/program/index.html
+++ b/program/index.html
@@ -25,13 +25,13 @@ intro: "H.O.P.E. Leadership Academy is a three-year program that incorporates Po
           <p class="timeline__bubble blue-bg">
             <em>Five Principles of Exemplary Leadership</em> Seminars (Posner & Kouzes)
           </p>
-          <img class="timeline__icon" src="/assets/img/timeline-icon.png">
+          <img class="timeline__icon" src="{{site.baseurl}}/assets/img/timeline-icon.png">
         </li>
         <li class="timeline-list__item">
           <p class="timeline__bubble light-green-bg">
             Speech Writing and Oratorical Contest
           </p>
-          <img class="timeline__icon" src="/assets/img/timeline-icon.png">
+          <img class="timeline__icon" src="{{site.baseurl}}/assets/img/timeline-icon.png">
         </li>
         <li class="timeline-list__item--year" id="year2">
           <span>Year 2</span>
@@ -40,7 +40,7 @@ intro: "H.O.P.E. Leadership Academy is a three-year program that incorporates Po
           <p class="timeline__bubble dark-green-bg">
             <em>Five Principles of Exemplary Leadership</em> Seminars (Posner & Kouzes)
           </p>
-          <img class="timeline__icon" src="/assets/img/timeline-icon.png">
+          <img class="timeline__icon" src="{{site.baseurl}}/assets/img/timeline-icon.png">
         </li>
         <li class="timeline-list__item--year" id="year3">
           <span>Year 3</span>
@@ -49,13 +49,13 @@ intro: "H.O.P.E. Leadership Academy is a three-year program that incorporates Po
           <p class="timeline__bubble blue-bg">
             <em>Five Principles of Exemplary Leadership</em> Seminars (Posner & Kouzes)
           </p>
-          <img class="timeline__icon" src="/assets/img/timeline-icon.png">
+          <img class="timeline__icon" src="{{site.baseurl}}/assets/img/timeline-icon.png">
         </li>
         <li class="timeline-list__item">
           <p class="timeline__bubble light-green-bg">
             Speech Writing and Oratorical Contest
           </p>
-          <img class="timeline__icon" src="/assets/img/timeline-icon.png">
+          <img class="timeline__icon" src="{{site.baseurl}}/assets/img/timeline-icon.png">
         </li>
       </ul>
       <div class="timeline__line"></div>
