--- a/program/index.html
+++ b/program/index.html
@@ -29,7 +29,7 @@ intro: "H.O.P.E. Leadership Academy is a three-year program that incorporates Po
               <p class="timeline__bubble {{ theCycle }}">
                 {{ m.text }}
               </p>
-              <img class="timeline__icon" src="{{site.baseurl}}/assets/img/timeline-icon.png">
+              <img class="timeline__icon" src="{{site.baseurl}}/assets/img/icons/{{ m.icon }}">
             </li>
           {% endfor %}
         {% endfor %}
