Update organizers content and component styles

--- a/about/index.html
+++ b/about/index.html
@@ -9,23 +9,23 @@ By improving graduation rates, we can change lives, eradicate poverty, and impac
 
 organizers:
 - name: "Libby Parker"
-  img_path: "http://placehold.it/150x150"
+  img_path: "libby.jpg"
   bio: ""
 
 - name: "Todd Powers"
-  img_path: "http://placehold.it/150x150"
+  img_path: "todd.jpg"
   bio: ""
 
 - name: "Shalunda Sherrod"
-  img_path: "http://placehold.it/150x150"
+  img_path: "shalunda.jpg"
   bio: ""
 
 - name: "Allen Perkins"
-  img_path: "http://placehold.it/150x150"
+  img_path: "allen.jpg"
   bio: ""
 
 - name: "Patricia Dunn Demos"
-  img_path: "http://placehold.it/150x150"
+  img_path: "patricia.jpg"
   bio: ""
 ---
 
@@ -34,8 +34,8 @@ organizers:
 	<ul class="image-list">
 		{% for o in page.organizers %}
 		<li class="image-list__item">
-			<img src="{{ o.img_path }}">
-			<h3>{{ o.name }}</h3>
+			<img src="{{ site.baseurl }}/assets/img/organizers/{{ o.img_path }}">
+			<p>{{ o.name }}</p>
 		</li>
 		{% endfor %}
 	</ul>
