--- a/about/index.html
+++ b/about/index.html
@@ -43,10 +43,10 @@ organizers:
 <section class="container">
 	<h2 class="heading">Our Impact</h2>
 	<ul class="link-list--interactive" id="graph-links">
-		<li class="link-list__item link-list__item--active" id="attendance">Attendance</li>
-		<li class="link-list__item" id="discipline">Discipline</li>
-		<li class="link-list__item" id="academics">Academics</li>
-		<li class="link-list__item" id="aspire">Aspire Scores</li>
+		<li class="link-list__item link-list__item--active" data-id="attendance">Attendance</li>
+		<li class="link-list__item" data-id="discipline">Discipline</li>
+		<li class="link-list__item" data-id="academics">Academics</li>
+		<li class="link-list__item" data-id="aspire">Aspire Scores</li>
 	</ul>
 	<ul class="graph-list" id="graphs">
 		<li class="graph-list__item" id="attendance">
@@ -84,24 +84,22 @@ organizers:
 	</ul>
 	<script>
 		var graphLinks = document.querySelector("#graph-links").querySelectorAll(".link-list__item");
-		var graphs = document.querySelector("#graphs").querySelectorAll("graph-list__item");
+		var graphs = document.querySelector("#graphs").querySelectorAll(".graph-list__item");
 
 		for (var i = 0; i < graphLinks.length; i++) {
 			graphLinks[i].addEventListener("click",function(){
 				for (var i = 0; i < graphs.length; i++) {
-					if(graphs[i].id == this.id){
+					if(graphs[i].id == this.dataset.id){
 						graphs[i].classList.remove("u-hidden");
 					}else{
 						graphs[i].classList.add("u-hidden");
 					}
 				};
 				for (var i = 0; i < graphLinks.length; i++) {
-					if(graphLinks[i].id == this.id){
-						this.classList.remove("link-list__item");
+					if(graphLinks[i].dataset.id == this.dataset.id){
 					  	this.classList.add("link-list__item--active");
 					}else{
 					  	graphLinks[i].classList.remove("link-list__item--active");
-					  	graphLinks[i].classList.add("link-list__item");
 					}
 				};
 			});
