Integrate youtube video playlist in program, add responsive styles to new ytv component

--- a/program/index.html
+++ b/program/index.html
@@ -36,6 +36,15 @@ intro: "H.O.P.E. Leadership Academy is a three-year program that incorporates Po
       </ul>
       <div class="timeline__line"></div>
 </section>
+<section>
+  <div class="container">
+    <h2 class="heading">Student Projects</h2>
+    <h4 class="subheading">A playlist of the work produced by students in the Leadership Program</h4>
+    <div class="ytv__wrapper">
+      <iframe class="ytv" width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLbyqVkWyH4h89QiczHuEXo_-j_Kmpuiu9" frameborder="0" allowfullscreen></iframe>
+    </div>
+  </div>
+</section>
 <ul class="cta-list">
 	<li class="cta-list__item dark-green-bg">
 		<h2>Get Involved</h2>
