Update image content

--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 layout: default
 
 title: Our Mission
-banner: "/assets/img/home-banner.jpg"
+banner: "/assets/img/about.jpg"
 intro: "The mission of H.O.P.E. Leadership Academy is to decrease the dropout rate and thus improve the quality of life in our schools, community, and state.  
 <br><br>
 By improving graduation rates, we can change lives, eradicate poverty, and impact the local and state economy."
