--- a/donate/index.html
+++ b/donate/index.html
@@ -2,7 +2,7 @@
 layout: default
 
 title: Get Involved
-banner: "/assets/img/home-banner.jpg"
+banner: "/assets/img/donate.jpg"
 intro: "YOU CAN MAKE A DIFFERENCE!  Donate today and help us expand this program and reach more students!  Your donation will help to provide transportation, materials, teachers, and service project funds for these young cadets.  We are extremely grateful for your donations and support."
 
 primary:
