--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 
 title: Helping Others Pursue Excellence
-banner: "/assets/img/home-banner.jpg"
+banner: "/assets/img/home.jpg"
 intro: "The purpose of HOPE Leadership Academy is to identify students who have leadership potential, provide leadership and mentoring training through our three year, service oriented program, and furnish program graduates as peer mentors to students in poverty.  Our goal is to decrease the dropout rate and thus improve the quality of life in our schools, communities, and state."
 ---
 
