--- a/program/index.html
+++ b/program/index.html
@@ -2,7 +2,7 @@
 layout: default
 
 title: Program Overview
-banner: "/assets/img/home-banner.jpg"
+banner: "/assets/img/program.jpg"
 intro: "H.O.P.E. Leadership Academy is a three-year program that incorporates Posner & Kouzes’s Five Practices of Exemplary Leadership, Covey’s 7 Habits of Highly Effective Teens, as well as writing, iMovie production, public speaking, creative arts, collaboration, and research techniques."
 ---
 
