Updates and bug fixes from client feedback

--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@ layout: default
 
 title: Our Mission
 banner: "/assets/img/about.jpg"
-intro: "The mission of H.O.P.E. Leadership Academy is to decrease the dropout rate and thus improve the quality of life in our schools, community, and state.  
+intro: "The mission of HOPE Leadership Academy is to impact lives and communities by teaching leadership skills and decreasing dropout rates.
 <br><br>
 By improving graduation rates, we can change lives, eradicate poverty, and impact the local and state economy."
 
