--- a/donate/index.html
+++ b/donate/index.html
@@ -1,17 +1,9 @@
 ---
 layout: default
 
-title: Get Involved
+title: Donate Today
 banner: "/assets/img/donate.jpg"
-intro: "YOU CAN MAKE A DIFFERENCE!  Donate today and help us expand this program and reach more students!  Your donation will help to provide transportation, materials, teachers, and service project funds for these young cadets.  We are extremely grateful for your donations and support."
-
-primary:
-    text: "Donate Now"
-    link: "#"
-
-secondary:
-    text: "Play Video"
-    link: "#"
+intro: "You can make a difference!  Donate today and help us expand this program and reach more students!  Your donation will help to provide transportation, materials, teachers, and service project funds for these young cadets.  We are extremely grateful for your donations and support."
 ---
 
 <section class="container">
@@ -24,6 +16,7 @@ secondary:
           <div class="info">
             <h2>{{ tier.title }}</h2>
             <p>{{ tier.text }}</p>
+            <button class="dark-green-bg">Donate</button>
           </div>
           <span class="price">{{ tier.price }}</span>
         </li>
