--- a/about/index.html
+++ b/about/index.html
@@ -10,23 +10,23 @@ By improving graduation rates, we can change lives, eradicate poverty, and impac
 organizers:
 - name: "Libby Parker"
   img_path: "libby.jpg"
-  bio: ""
+  bio_link: "https://docs.google.com/presentation/d/1UxASjIUTPb6ADqTloKp54Iandpe2y4wI6hgN2f3XGxk/pub?start=false&loop=false&delayms=3000&slide=id.g13d6013fcb_0_0"
 
 - name: "Todd Powers"
   img_path: "todd.jpg"
-  bio: ""
+  bio_link: "https://docs.google.com/presentation/d/1UxASjIUTPb6ADqTloKp54Iandpe2y4wI6hgN2f3XGxk/pub?start=false&loop=false&delayms=3000&slide=id.g13d6013fcb_0_12"
 
 - name: "Shalunda Sherrod"
   img_path: "shalunda.jpg"
-  bio: ""
+  bio_link: "https://docs.google.com/presentation/d/1UxASjIUTPb6ADqTloKp54Iandpe2y4wI6hgN2f3XGxk/pub?start=false&loop=false&delayms=3000&slide=id.g13d6013fcb_0_17"
 
 - name: "Allen Perkins"
   img_path: "allen.jpg"
-  bio: ""
+  bio_link: "https://docs.google.com/presentation/d/1UxASjIUTPb6ADqTloKp54Iandpe2y4wI6hgN2f3XGxk/pub?start=false&loop=false&delayms=3000&slide=id.g13d6013fcb_0_22"
 
 - name: "Patricia Dunn Demos"
   img_path: "patricia.jpg"
-  bio: ""
+  bio_link: "https://docs.google.com/presentation/d/1UxASjIUTPb6ADqTloKp54Iandpe2y4wI6hgN2f3XGxk/pub?start=false&loop=false&delayms=3000&slide=id.g13d6013fcb_0_27"
 ---
 
 <section class="container">
@@ -34,8 +34,10 @@ organizers:
 	<ul class="image-list">
 		{% for o in page.organizers %}
 		<li class="image-list__item">
-			<img src="{{ site.baseurl }}/assets/img/organizers/{{ o.img_path }}">
-			<p>{{ o.name }}</p>
+			<a href="{{ o.bio_link }}" target="_blank">
+				<img src="{{ site.baseurl }}/assets/img/organizers/{{ o.img_path }}">
+				<p>{{ o.name }}</p>
+			</a>
 		</li>
 		{% endfor %}
 	</ul>
